--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -17,58 +17,21 @@ Library Manager: ArmAr.exe V5.06 update 1 (build 61)
 Hex Converter:   FromElf.exe V5.06 update 1 (build 61)
 CPU DLL:         SARMCM3.DLL V5.18
 Dialog DLL:      DCM.DLL V1.13.6.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
+Target DLL:      Segger\JL2CM3.dll V2.99.18.0
 Dialog DLL:      TCM.DLL V1.14.8.0
  
 <h2>Project:</h2>
-E:\BaiduNetdiskDownload\Prj-ÖÇÄÜ¼Ò¾Ó\Project.uvprojx
-Project File Date:  10/29/2022
+C:\Users\KEXB\Desktop\greenhouse\smart\Project.uvprojx
+Project File Date:  11/28/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-assembling startup_stm32f10x_md.s...
-compiling core_cm3.c...
-compiling misc.c...
-compiling stm32f10x_crc.c...
-compiling system_stm32f10x.c...
-compiling stm32f10x_bkp.c...
-compiling stm32f10x_cec.c...
-compiling stm32f10x_adc.c...
-compiling stm32f10x_can.c...
-compiling stm32f10x_dbgmcu.c...
-compiling stm32f10x_dac.c...
-compiling stm32f10x_exti.c...
-compiling stm32f10x_gpio.c...
-compiling stm32f10x_fsmc.c...
-compiling stm32f10x_dma.c...
-compiling stm32f10x_flash.c...
-compiling stm32f10x_iwdg.c...
-compiling stm32f10x_i2c.c...
-compiling stm32f10x_pwr.c...
-compiling stm32f10x_rcc.c...
-compiling stm32f10x_spi.c...
-compiling stm32f10x_rtc.c...
-compiling stm32f10x_sdio.c...
-compiling LED.c...
-compiling Key.c...
-compiling stm32f10x_wwdg.c...
-compiling PWM.c...
-compiling stm32f10x_usart.c...
-compiling OLED.c...
-compiling stm32f10x_tim.c...
-compiling MyUSART.c...
-compiling AD.c...
-compiling Timer.c...
-compiling DHT11.c...
-compiling Delay.c...
-compiling MySPI.c...
-compiling NRF24L01.c...
-compiling main.c...
-compiling stm32f10x_it.c...
 compiling esp.c...
+compiling AD.c...
+compiling main.c...
 linking...
-Program Size: Code=4616 RO-data=796 RW-data=96 ZI-data=1280  
+Program Size: Code=6508 RO-data=2312 RW-data=108 ZI-data=1276  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -83,7 +46,7 @@ Package Vendor: Keil
   C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:14
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
